--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,9 +1,13 @@
 <resources>
     <string name="app_name">Online Meeting App</string>
+    <string name="reg">Register Now</string>
+    <string name="fname">Full Name</string>
     <string name="email">Email</string>
+    <string name="mobile">Mobile No.</string>
     <string name="password">Password</string>
     <string name="login">LOGIN</string>
     <string name="forgot_password">FORGOT PASSWORD?</string>
     <string name="new_user_register_now">New User? Register Now</string>
+    <string name="register">Register</string>
 
 </resources>
